2008-12-21  Curtis Gedak  <gedakc@gmail.com>

	* src/Utils.cc: Fixed application crash.
	- GParted would crash when saving details if locale was not set.

2008-12-20  Curtis Gedak  <gedakc@gmail.com>

	* src/ext4.cc: Add flags to create journal and use extent option.

2008-12-18  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/GParted_Core.cc,
	  src/Utils.cc: Added support for ext4 file systems.
	  - Closes GParted bug #503112

	* include/ext4.h,
	  include/Makefile.am,
	  src/ext4.cc,
	  src/Makefile.am: Created 2 files to support ext4 operations.
	  - Support for ext4 is planned for version 2.6.28 of the Linux kernel.
	  - e2fsprogs version 1.41.0 or higher is required.

	* include/FS_Info.h,
	  src/FS_Info.cc: Added get_fs_type() method

2008-12-08  Curtis Gedak  <gedakc@gmail.com>

	* include/FS_Info.h,
	  src/FS_Info.cc
	  src/GParted_Core.cc: Reduced FS_Info cache disk reads.

2008-12-07  Curtis Gedak  <gedakc@gmail.com>

	* include/Utils.h,
	  src/Dialog_Partition_New.cc,
	  src.DialogFeatures.cc,
	  src/GParted_Core.cc,
	  src/Utils.cc,
	  src/Win_GParted.cc: Added lvm2 physical volume detection.

2008-12-03  Curtis Gedak  <gedakc@gmail.com>

	* src/Dialog_Partition_Info.cc,
	  src/Win_GParted.cc: Made text by field labels selectable.
	  - Useful for copy/paste of UUID or volume label

	* include/Utils.h,
	  src/Utils.cc: Added text selectable parameter to mk_label()

2008-12-02  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: Append -svn to version for continuing development

2008-11-29  Curtis Gedak  <gedakc@gmail.com>

	* configure.in: gparted-0.4.1
	  ===================================================

	* src/GParted.cc: Removed code to recognize /dev/mapper/* devices.
	  - Too many /dev/mapper/* devices listed (including LVM partitions)
	  - Roll back patch applied on 2008-10-15
	  - Reopens GParted bug #556114

	* include/FS_Info.h,
	  src/FS_Info.cc: Moved common code into new get_device_entry() method.
