@@ -1,3 +1,7 @@
+2008-12-31  Curtis Gedak  <gedakc@gmail.com>
+
+	* src/Utils.cc: Added e2fsprogs version required for ext4 support.
+
 2008-12-21  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/Utils.cc: Fixed application crash.
